<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swinburne.irtsa.irtsa.scan.StartScanFragment">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Processing Technique"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/pngPathSpinner" />

    <Spinner
        android:id="@+id/processingTechniqueSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <Button
        android:id="@+id/startScanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/start_scan_button_text"
        app:layout_constraintEnd_toEndOf="@+id/processingTechniqueSpinner"
        app:layout_constraintTop_toBottomOf="@+id/beginFrameRangeEditText" />

    <Spinner
        android:id="@+id/pngPathSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/processingTechniqueSpinner"
        app:layout_constraintStart_toStartOf="@+id/pathTextView" />

    <TextView
        android:id="@+id/pathTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="Png Directory"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/pngPathSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Frames to process"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/processingTechniqueSpinner"
        app:layout_constraintTop_toBottomOf="@+id/processingTechniqueSpinner" />

    <EditText
        android:id="@+id/beginFrameRangeEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxWidth="60dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/allCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:text="All"
        app:layout_constraintBottom_toBottomOf="@+id/endFrameRangeEditText"
        app:layout_constraintStart_toEndOf="@+id/endFrameRangeEditText"
        app:layout_constraintTop_toTopOf="@+id/endFrameRangeEditText" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <EditText
        android:id="@+id/endFrameRangeEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginFrameRangeEditText"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="-"
        android:textSize="36sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/beginFrameRangeEditText"
        app:layout_constraintStart_toEndOf="@+id/beginFrameRangeEditText" />

</android.support.constraint.ConstraintLayout>
