<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.swinburne.irtsa.irtsa.containers.ScanContainerFragment"
    android:id="@+id/scanContainer">

</FrameLayout>
